@@ -1,5 +1,7 @@
 package com.summary.design.factorymethod.standard;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * @author scq
  */
@@ -8,9 +10,11 @@ public class HumanFactory extends AbstractHumanFactory{
     public <T extends Human> T createHuman(Class<T> c) {
         Human human = null;
         try {
-            human = (T) Class.forName(c.getName()).newInstance();
+            human = (T) Class.forName(c.getName()).getDeclaredConstructor().newInstance();
         } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
             System.out.println("人种生成错误！");
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new RuntimeException(e);
         }
         return (T) human;
     }
